<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="ST_ErrorSource" Id="{82858906-bd52-094e-0b2f-0b5b1d45ef8f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE ST_ErrorSource :
STRUCT
	InstanceName	: Tc2_System.T_MaxString;
	InsatncePath	: Tc2_System.T_MaxString;
	AdsError		: ST_AdsError;
	GenericError	: ST_GenericError;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>